# django-dbml

./: Pipfile  README.md  requirements-dev.txt  requirements-test.txt  setup.cfg  tox.ini  update_version.py
.github/workflows/: production.yml  publish-to-test-pypi.yml
django_dbml/: utils.py
django_dbml/management/commands/: dbml.py
tests/: main_test.py
tests/examples/: test0.dbml
tests/testprj/testapp/: models.py
tests/testprj/testprj/: settings.py  urls.py
