[metadata]
name = django-dbml
version = 0.3.3
description = This app can generate a DBML output for all installed models.
long_description_content_type = text/markdown
long_description = file: README.md
url = https://makecodes.dev/
author = Michel Wilhelm
author_email = michelwilhelm@gmail.com
license = unlicense
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
