[metadata]
name = django-dbml
version = 0.3.5
description = Django extension aimed to generate DBML from all models
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/makecodesdev/django-dbml
author = Michel Wilhelm
author_email = michelwilhelm@gmail.com
license = MIT
install_requires = 
    django>=2.0

classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.0
    Intended Audience :: Developers
    License :: OSI APPROVED :: MIT LICENSE
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
